# gst-mpd-daemon

./: README.md  gst_tcp_daemon.c  meson.build
